# corvue

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PERFORMANCE.md  PROJECT_FINAL_SUMMARY.md  PROJECT_SUMMARY.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  USER_EXPERIENCE.md
crates/corvus-cli/: Cargo.toml
crates/corvus-cli/examples/: basic_usage.rs
crates/corvus-cli/src/: cache.rs  chat_memory.rs  circuit_breaker.rs  cli.rs  completer.rs  config.rs  config_loader.rs  errors.rs  format.rs  lib.rs  main.rs  mcp_bridge.rs  memory_store.rs  session.rs
crates/corvus-core/: Cargo.toml
crates/corvus-core/src/: agent.rs  completion.rs  embedding.rs  error.rs  lib.rs  memory.rs  plugin.rs  tests.rs  tool.rs  types.rs
crates/corvus-execution/: Cargo.toml
crates/corvus-execution/src/: languages.rs  lib.rs  sandbox.rs  security.rs  simple.rs
crates/corvus-memory/: Cargo.toml
crates/corvus-memory/benches/: vector_index.rs
crates/corvus-memory/src/: lib.rs  simple.rs  tagmemo.rs  vector.rs
crates/corvus-memory/src/tagmemo/: epa.rs  pyramid.rs  storage.rs  wave.rs
crates/corvus-plugin/: Cargo.toml
crates/corvus-plugin/src/: error.rs  lib.rs  lifecycle.rs  permission.rs  wasm.rs
crates/corvus-protocol/: Cargo.toml
crates/corvus-protocol/src/: error.rs  lib.rs  transport.rs
crates/corvus-protocol/src/mcp/: client.rs  framework.rs  mod.rs  protocol.rs  protocol_tests.rs  server.rs
crates/corvus-protocol/src/mcp/servers/: filesystem.rs  mod.rs
crates/corvus-providers/: Cargo.toml
crates/corvus-providers/src/: error.rs  lib.rs  ollama.rs  tests.rs
crates/corvus-providers/src/openai/: client.rs  completion.rs  embedding.rs  mod.rs  types.rs
crates/corvus-reasoning/: Cargo.toml
crates/corvus-reasoning/src/: agent_dream.rs  chain_of_thought.rs  lib.rs  planning.rs
crates/corvus-telemetry/: Cargo.toml
crates/corvus-telemetry/src/: error.rs  lib.rs  logging.rs  metrics.rs  tracing.rs
crates/corvus-tools/: Cargo.toml
crates/corvus-tools/src/: execute.rs  file.rs  git.rs  http.rs  lib.rs  search.rs  shell.rs  system.rs
docs/: ROADMAP_v2.0.md
examples/: README.md  basic_workflow.rs  ollama_example.rs  simple_mcp_server.rs
tests/: integration_tests.rs
