[package]
name = "corvus-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Plugin system for Corvus AI Agent"

[dependencies]
corvus-core = { path = "../corvus-core" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono = { workspace = true, features = ["serde"] }
dirs = "5.0"
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }

[features]
default = []
wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]
