[package]
name = "corvus-reasoning"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Reasoning and planning engine for Corvus (Chain-of-Thought, multi-step planning, AgentDream)"

[dependencies]
corvus-core = { path = "../corvus-core" }
corvus-memory = { path = "../corvus-memory" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
ndarray.workspace = true
rand.workspace = true
chrono.workspace = true

[dev-dependencies]
criterion = "0.5"
