[package]
name = "corvus-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Built-in tools for Corvus AI Agent"

[dependencies]
corvus-core = { path = "../corvus-core" }
corvus-execution = { path = "../corvus-execution" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
num_cpus = "1.16"
